New Scene:Level 1_1; Now we use SampleScene as a lab for new stuff.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\BonfirController.cs" />
+    <Compile Include="Assets\Scripts\BoundartWall.cs" />
     <Compile Include="Assets\Scripts\BulletController.cs" />
     <Compile Include="Assets\Scripts\FireController.cs" />
     <Compile Include="Assets\Scripts\GravitonEffect.cs" />
